--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "author": "Jimmy (jim)",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
+    "mongoose": "^5.12.9",
     "morgan": "^1.10.0"
   },
-    "devDependencies": {
+  "devDependencies": {
     "nodemon": "^2.0.7"
   }
 }
