--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "jim.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha 'test/*'"
   },
   "keywords": [
     "nada"
@@ -21,6 +21,9 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "mocha": "^8.4.0",
     "nodemon": "^2.0.7"
   }
 }
