--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "jim.js",
   "type": "module",
   "scripts": {
-    "test": "mocha 'test/*'"
+    "test": "mocha 'test/*'",
+    "start": "node jim.js"
   },
   "keywords": [
     "nada"
